@@ -81,6 +81,9 @@ public class SecurityUtils {
         StringBuilder sb = new StringBuilder();
         sb.append(challenge.getScheme().getTechnicalName()).append(' ');
 
+        String secret = (challenge.getSecret() == null) ? null : new String(
+                challenge.getSecret());
+
         if (challenge.getCredentials() != null) {
             sb.append(challenge.getCredentials());
         } else if (challenge.getScheme().equals(ChallengeScheme.HTTP_AWS)) {
@@ -154,13 +157,13 @@ public class SecurityUtils {
 
             // Append the AWS credentials
             sb.append(challenge.getIdentifier()).append(':').append(
-                    Base64.encodeBytes(toHMac(rest.toString(), new String(
-                            challenge.getSecret())), Base64.DONT_BREAK_LINES));
+                    Base64.encodeBytes(toHMac(rest.toString(), secret),
+                            Base64.DONT_BREAK_LINES));
         } else if (challenge.getScheme().equals(ChallengeScheme.HTTP_BASIC)) {
             try {
-                String credentials = challenge.getIdentifier() + ':'
-                        + new String(challenge.getSecret());
-                sb.append(Base64.encodeBytes(credentials.getBytes("US-ASCII"), Base64.DONT_BREAK_LINES));
+                String credentials = challenge.getIdentifier() + ':' + secret;
+                sb.append(Base64.encodeBytes(credentials.getBytes("US-ASCII"),
+                        Base64.DONT_BREAK_LINES));
             } catch (UnsupportedEncodingException e) {
                 throw new RuntimeException(
                         "Unsupported encoding, unable to encode credentials");
@@ -168,8 +171,9 @@ public class SecurityUtils {
         } else if (challenge.getScheme().equals(ChallengeScheme.SMTP_PLAIN)) {
             try {
                 String credentials = "^@" + challenge.getIdentifier() + "^@"
-                        + new String(challenge.getSecret());
-                sb.append(Base64.encodeBytes(credentials.getBytes("US-ASCII"), Base64.DONT_BREAK_LINES));
+                        + secret;
+                sb.append(Base64.encodeBytes(credentials.getBytes("US-ASCII"),
+                        Base64.DONT_BREAK_LINES));
             } catch (UnsupportedEncodingException e) {
                 throw new RuntimeException(
                         "Unsupported encoding, unable to encode credentials");
